# fastapi-synchronous-sqlalchemy

./: Dockerfile  LICENSE  README.md  app.py  app_alternative.py  client.py  compose.yml  pyproject.toml
